# PNsAV

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
PNsAV/: global_system_prompt.txt  main.py  validity_check_prompt.txt
PNsAV/LLMbenchmarks/benchmark_1_stock_qwen2.5_14b/: benchmark.ipynb
PNsAV/LLMbenchmarks/benchmark_2_stock_qwen2.5_14b/: benchmark.ipynb  changelog.txt
PNsAV/LLMbenchmarks/benchmark_3_stock_qwen2.5_14b/: results.txt
PNsAV/LLMbenchmarks/benchmark_4_self-verify_qwen2.5_14b/: benchmark.ipynb  results.txt
PNsAV/LLMbenchmarks/benchmark_5_self-verify_chatgpt4omini/: benchmark.ipynb  prompts.txt  results.txt
PNsAV/LLMbenchmarks/benchmark_6_4agent_orchestration/: atom.py  atom_prompt.txt  benchmark.ipynb  prompts.txt  prompts_old.txt  results.txt  rule_prompt.txt  schema.py
PNsAV/LLMbenchmarks/benchmark_6_4agent_orchestration/agents_prompts/: arg_prompt.txt  rule_prompt.txt
PNsAV/LLMbenchmarks/benchmark_6_4agent_orchestration/benchmark_data/: argmicrotexts_gold_standard.json  gen_valid_tests.py
PNsAV/src/agents_prompts/: arg_prompt.txt  atom_prompt.txt  rule_prompt.txt
PNsAV/src/core/: engine.py  extract.py  main.py  model.py  pipeline.py
PNsAV/src/core/engine/: CMakeLists.txt  bindings.cpp  data.h  engine.cpp  engine.h  symbolic_utils.cpp  symbolic_utils.h  test.cpp
PNsAV/src/interface/: index.py  style.css
PNsAV/src/symbolic_data_repair/: arg.py  atom.py  rule.py
documentation/project/docs/: Brief UI UX.md
documentation/project/github/: PNsAV docs.md
(+20 files in other folders)
